--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
     <footer class="footer-onder footer-work-groot">
         <!-- Copyright -->
         <div>
-            <p class="text-center p-3"> © 2024 Copyright: Floor Vermandere | e-mail: <a href="mailto:floor@floo.re">floor@floo.re </a></p>
+            <p class="text-center p-3"> © 2025 Copyright: Floor Vermandere | e-mail: <a href="mailto:hello@floo.re">hello@floo.re </a></p>
         </div>
         <!-- Copyright -->
     </footer>
