--- a/work/reclame.html
+++ b/work/reclame.html
@@ -91,7 +91,7 @@
     <footer class="position-relative footer-work-groot">
         <!-- Copyright -->
         <div class="text-center p-3">
-          <p> © 2024 Copyright: Floor Vermandere | e-mail: <a href="mailto:floor@floo.re">floor@floo.re </a></p>
+          <p> © 2025 Copyright: Floor Vermandere | e-mail: <a href="mailto:hello@floo.re">hello@floo.re </a></p>
         </div>
         <!-- Copyright -->
     </footer>
